# migration-mdps-sigale

./: .env.exemple  .gitignore  README.md  config.exemple.py  config.py  main.py  pyproject.toml
migration_mdps_proeco_sigale/: __init__.py  config.exemple.py  config.py  date_utils.py  migrations.py  run.py  tools.py
migration_mdps_proeco_sigale/db/: proeco_connector.py  requetes_sql.py  sigale_connector.py
src/: date_utils.py  logger.py  migrations.py
src/db/: proeco_connector.py  requetes_sql.py  sigale_connector.py  sql_write_methods.py
