[project]
name = "migration-mdps-proeco-sigale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fdb>=2.0.2",
    "sqlalchemy-firebird>=2.1",
    "sqlalchemy>=2.0.40",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
]
